egonlang-core/res/examples/invalid/prefix_expr_bang_on_list_expr.eg
![];
![1, 2, 3];

// out: TypeError: mismatched types: expected type `Bool` but received `List`
// out: TypeError: mismatched types: expected type `Bool` but received `List`